# setup-maxscale-repo

./: CMakeLists.txt  configure-maxscale-repo-0.1.0.deb  configure-maxscale-repo-0.1.0.rpm  configure-maxscale-repo-0.1.1.deb  configure-maxscale-repo-0.1.1.rpm  configure-maxscale-repo-0.1.2.deb  configure-maxscale-repo-0.1.2.rpm  configure-maxscale-repo.sh.in  macros.cmake  maxscale.list.template  maxscale.repo.sles11.template  maxscale.repo.sles12.template  maxscale.repo.suse.template  maxscale.repo.suse13.template  maxscale.repo.template  postinst.in  run-setup-maxscale-repos.sh  set-maxscale-repo-password.sh  set-maxscale-repo-password.sh.in  setup-maxscale-repos.sh  setup-maxscale-repos.sh.in  setup_maxscale_repos.sh
